--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Icons from '../components/Icons.astro';
           </h1>
           <h2 class="text-sm leading-6 text-gray-500 -mt-1">@alinpr18</h2>
           <p class="mt-1 max-w-2xl text-sm text-gray-500">
-            Aprendiendo Desarrollo Web en Platzi - Frontend Developer - #javascript #react #astro #tailwind 
+            Aprendiendo Desarrollo Web en Platzi - Frontend Developer - #Javascript #React #Astro #Tailwindcss 
           </p>
         </div>
         <div>
