--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,17 @@ const { title } = Astro.props as Props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 		<meta name="generator" content={Astro.generator} />
+		<meta name="robots" content="follow, index" />
+		<meta name="description"
+		content="Frontend Developer" />
+		<meta property="og:url" content="https://alinpr18.github.io/" />
+		<meta property="og:type" content="website" />
+		<meta property="og:site_name" content="Ali Paredes Ramirez" />
+		<meta property="og:description"
+		content="Frontend Developer React" />
+		<meta property="og:title" content="Ali Paredes Ramirez" />
+		<!-- <meta property="og:image" content="" /> -->
+		<meta property="og:locale" content="es_ES" />
 		<title>{title}</title>
 	</head>
 	<body class="antialiased text-slate-400 bg-slate-900">
