--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Icons from '../components/Icons.astro';
           </p>
         </div>
         <div>
-          <img class="rounded-lg w-48 bg-green-400" 
+          <img loading="lazy" width="400" height="400" class="rounded-lg w-48 bg-green-400" 
             alt="Ali Paredes Ramirez" src="https://pbs.twimg.com/profile_images/1534340031854288898/L95PqGje_400x400.jpg" />
         </div>
       </div>
